<resources>
    <string name="app_name">IntelliDrive</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="name">Name</string>
    <string name="register_description">Already have an account? Login!</string>
    <string name="register_button">Register</string>

    <string name="title_activity_maps">Map</string>

    <string name="new_trip">New Trip</string>

    <string name="get_all_miles">Get all miles</string>

    <string name="assistant">Assistant</string>

    <string name="miles_travelled">Miles travelled: %1$s</string>

    <string name="mpg">MPG: %1$s</string>
    <string name="cpg">CPG: $%1$s</string>

    <string name="settings">Settings</string>
    <string name="gallons_in_car">Gallons of gas in car: </string>
    <string name="save">Save</string>

    <string name="current_trip">Current trip: %1$s</string>

    <!-- Trip dialog fragment -->
    <string name="trip_name">Trip name</string>
    <string name="trip_type">Trip type</string>
    <string name="cancel_button">Cancel</string>
    <string name="start_button">Start trip</string>
    <string name="personal">PERSONAL</string>
    <string name="business">BUSINESS</string>
    <string name="other">OTHER</string>

    <!-- DATA ACCESSORS: DO NOT TOUCH -->
    <string name="gallons_save">gallons</string>
    <string name="miles_filled_save">miles filled</string>
    <string name="miles_saved">miles</string>
    <string name="token_save">token</string>
    <string name="cost">cost</string>
    <string name="current_trip_save">current trip</string>

    <!-- USED FOR ACCESSING DATABASE -->
    <string name="token_storage">token_storage</string>

</resources>
