<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical"
              tools:context="com.dglasser.intellidrive.CustomDialogs.TripDialogFragment">


    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/trip_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/trip_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_type"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/personal_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"/>

        <RadioButton
            android:id="@+id/business_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business"/>

        <RadioButton
            android:id="@+id/other_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"/>
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button"/>

        <Button
            android:id="@+id/start_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_button"/>

    </LinearLayout>

</LinearLayout>
